# ilibc

./: meson.build  readme.md
include/: signal.h  stdio.h  stdlib.h  string.h  syscall.h  time.h  unistd.h
src/asm/: crt0.asm  syscall.asm
src/c/: signal.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
